[package]
name = "dropignore"
version = "0.1.2-alpha.0"
description = "A tool to conveniently ignore files and folders from Dropbox sync."
license = "Apache-2.0 OR MIT"
edition = "2018"
authors = ["Michael Weirauch <michael.weirauch@gmail.com>"]
readme = "README.md"

[dependencies]
clap = "2.33.1"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
directories = "4.0.1"
fern = { version = "0.6.0", features = ["colored"] }
globset = "0.4.5"
log = "0.4.8"
notify = "4.0.15"
serde = { version = "1.0.111", default-features = false, features = ["derive"] }
walkdir = "2.3.1"

[target.'cfg(unix)'.dependencies]
xattr = "0.2.2"

[target.'cfg(windows)'.dependencies]
widestring = "0.5.1"
winapi = { version = "0.3.8", default-features = false, features = ["fileapi"] }

[dev-dependencies]
tempfile = "3.1.0"
rstest = "0.12.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
